force-app/main/default/objects/B25__ResourceLayout__c/B25__ResourceLayout__c.object-meta.xml
<CustomObject>
    <description>A Resource can have different Layouts that change the capacity of the Resource.</description>
    <label>Resource Layout</label>
    <nameField>
        <label>Resource Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Layouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>