force-app/main/default/objects/B25__ResourceLayout__c/fields/B25__Capacity__c.field-meta.xml
<CustomField>
    <fullName>B25__Capacity__c</fullName>
    <description>The capacity provided to a Resource by using a layout.</description>
    <inlineHelpText>La capacité fournie à une ressource en utilisant une disposition.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>