force-app/main/default/objects/B25__ResourceLayout__c/fields/B25__Default__c.field-meta.xml
<CustomField>
    <fullName>B25__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>