force-app/main/default/objects/B25__ResourceLayout__c/fields/B25__IsActive__c.field-meta.xml
<CustomField>
    <fullName>B25__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows the layout to be selected on Reservations.</description>
    <inlineHelpText>Permet de sélectionner la disposition sur les réservations.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>