force-app/main/default/objects/B25__ResourceLayout__c/fields/B25__Resource__c.field-meta.xml
<CustomField>
    <fullName>B25__Resource__c</fullName>
    <description>The Resource to which this layout belongs.</description>
    <inlineHelpText>La ressource à laquelle cette disposition appartient.</inlineHelpText>
    <label>Resource</label>
    <referenceTo>B25__Resource__c</referenceTo>
    <relationshipLabel>Layouts</relationshipLabel>
    <relationshipName>ResourceLayouts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>